Use SVG defs for icons, center GH text, image

--- a/css/font.css
+++ b/css/font.css
@@ -25,3 +25,8 @@ body {
 #copy-button:active {
     color: #888;
 }
+#gh-link {
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
